--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "text recognition"
   ],
   "dependencies": {
-    "glob": "^5.0.10",
-    "uuid": "^3.4.0"
+    "glob": "^9.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "mocha": "~1.16.0",
+    "mocha": "^10.2.0",
     "should": "~2.1.1"
   },
   "scripts": {
