--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "huedawn-tesseract",
-  "version": "0.3.3",
-  "author": "Rona Dini Hari <rona@huedawn.me>",
+  "name": "dawnsparks-tesseract",
+  "version": "0.4.0",
+  "author": "Rona Dini Hari <hari.ronadini@gmail.com>",
   "description": "A fork of a simple wrapper for the Tesseract OCR package",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:rona_dinihari/node-tesseract.git"
+    "url": "git@bitbucket.org:dawnsparks/dawnsparks-tesseract.git"
   },
   "keywords": [
     "tesseract",
