--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "dawnsparks-tesseract",
+  "name": "dawnsparks-node-tesseract",
   "version": "0.4.0",
   "author": "Rona Dini Hari <hari.ronadini@gmail.com>",
   "description": "A fork of a simple wrapper for the Tesseract OCR package",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:dawnsparks/dawnsparks-tesseract.git"
+    "url": "https://rona_dinihari@bitbucket.org/dawnsparks/dawnsparks-node-tesseract.git"
   },
   "keywords": [
     "tesseract",
